# bot-rs

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  rustfmt.toml
.github/workflows/: rust.yml
data/: supported_coin_types.json
docker/wrapper/: README.md  kd-context-cache.patch
src/: analysis.rs  dao.rs  filter.rs  funcs.rs  lib.rs  main.rs  settings.rs
src/analysis/: freq.rs  model.rs
src/dao/: mongo.rs  mysql.rs  rdb.rs
src/dao/mongo/: analysis.rs  freq.rs  music_favorites.rs  music_settings.rs
src/dao/mysql/: music_cache.rs  wordcloud.rs
src/dao/rdb/: switch.rs  wordcloud.rs
src/filter/: call_query.rs  simple.rs
src/funcs/: command.rs  pkg.rs  text.rs
src/funcs/command/: chat.rs  coin.rs  config.rs  count.rs  curl.rs  hitokoto.rs  id.rs  music.rs  ping.rs  quote.rs  rate.rs  rom.rs  short.rs  start.rs  test.rs  today.rs  translate.rs  vv.rs  wcloud.rs  wiki.rs
src/funcs/command/music/: applemusic.rs  bilibili.rs  kugou.rs  netease.rs  provider.rs  soda.rs  tencent.rs
src/funcs/command/rom/: updater_core.rs  updater_links.rs
src/funcs/pkg/: cron.rs  escape.rs  jieba.rs  kv.rs  wcloud.rs
src/funcs/pkg/cron/: cron.rs
src/funcs/pkg/escape/: markdown.rs
src/funcs/pkg/jieba/: cut.rs
src/funcs/pkg/kv/: core.rs  pstore.rs
src/funcs/pkg/wcloud/: builder.rs  cron.rs  gen.rs  generate.rs
src/funcs/text/: fix.rs  fuck_b23.rs  guozao.rs  pretext.rs  repeat.rs  six.rs
src/myclap/: clap.rs
tests/: command.rs
tests/common/: mod.rs
