[package]
name = "bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.9.0"
clap = { version = "4.3.11", features = ["derive"] }
thiserror = "1.0.43"
teloxide = { version = "0.12.2", features = ["macros", "full"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.29.1", features = ["full"] }
rand = "0.8.5"
serde_json = "1.0.104"
fast_qr = { version = "0.12.1", features = ["image"] }
mysql_async = "0.34.1"
async-trait = "0.1.73"
scraper = "0.19.0"
cached = { version = "0.49.2", features = ["async"] }
chrono = "0.4.29"
dashmap = "5.5.3"
image = "0.25.0"
jieba-rs = "0.6.8"
cron = "0.12.0"
tokio-native-tls = "0.3.1"
x509-parser = "0.16.0"
toml = "0.8.8"
sled = "0.34.7"
urlencoding = "2.1.3"
reqwest-middleware = "0.2.5"
reqwest-retry = "0.4.0"
redis = { version = "0.25.2", features = ["tokio-comp"] }
[dependencies.pyo3]
version = "0.21.0"
features = ["auto-initialize"]
[profile.release]
lto = true
