[package]
name = "bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5"
regex = "1.10"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
teloxide = { version = "0.13", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
fast_qr = { version = "0.12", features = ["image"] }
mysql_async = "0.34"
async-trait = "0.1.8"
scraper = "0.20"
cached = { version = "0.53", features = ["async"] }
chrono = "0.4"
dashmap = "6"
image = "0.25"
jieba-rs = "0.7"
cron = "0.12"
tokio-native-tls = "0.3"
x509-parser = "0.16"
toml = "0.8"
sled = "0.34"
urlencoding = "2.1"
reqwest-middleware = "0.3"
reqwest-retry = "0.6"
redis = { version = "0.26", features = ["tokio-comp"] }
ping-server-rs = { git = "https://github.com/jizizr/ping-server-rs" }
async_once = "0.2"
futures = "0.3"
lingua = { version = "1.6", default-features = false, features = [
    "chinese",
    "english",
] }
wcloud = { git = "https://github.com/jizizr/wcloud" }
bytes = "1.7"
rand = "0.8"
url = "2.5"

[profile.release]
lto = true
