[package]
name = "bot-rs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"
teloxide = { git = "https://github.com/teloxide/teloxide", features = [
    "webhooks-axum",
    "rustls",
    "macros",
] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
fast_qr = { version = "0.12", features = ["image"] }
mysql_async = "0.35"
async-trait = "0.1.8"
scraper = "0.22"
cached = { version = "0.54", features = ["async"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
image = "0.25"
jieba-rs = "0.7"
cron = "0.14"
tokio-native-tls = "0.3"
x509-parser = "0.16"
toml = "0.8"
sled = "0.34"
urlencoding = "2.1"
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
redis = { version = "0.27", features = ["tokio-comp"] }
ping-server-rs = { git = "https://github.com/jizizr/ping-server-rs" }
async_once = "0.2"
futures = "0.3"
lingua = { version = "1.6", default-features = false, features = [
    "chinese",
    "english",
] }
wcloud = { git = "https://github.com/jizizr/wcloud" }
rand = "0.8"
url = "2.5"
mongodb = "3" 
serde_repr = "0.1"
anstyle = "1.0"

[profile.release]
lto = true
panic = "abort"
